--- a/unicorn-sparkle/package.json
+++ b/unicorn-sparkle/package.json
@@ -79,6 +79,7 @@
     "lint-staged": "15.4.3",
     "prettier": "3.4.2",
     "prettier-plugin-astro": "0.14.1",
-    "prettier-plugin-tailwindcss": "0.6.6"
+    "prettier-plugin-tailwindcss": "0.6.6",
+    "vite": "^6.0.11"
   }
 }
